
    o	On Unix(-alike) systems the default pager is now determined
	during configuration, and is `less' if available, otherwise
	`more' (and not `more -s' as previously).

    o	configure now tests for strptime functions that fail on inputs
	before 1970 (found on Irix).  It no longer checks for the SCSL
	and SGIMATH libraries on Irix.

    o	New formula interface to cor.test() in package ctest.

    o	"NA" is a valid color name (as NA has been a valid integer
	color).

    o	pairs() function has a new `gap' argument for adjusting the
	spacing between panels.

    o	R CMD check has a new test for unbalanced braces in Rd files.


BUG FIXES

    o	Fixed placement of mtext() output (including tick labels)
	when text is perpendicular to axis AND axis is logged
	(PR#997 and PR#865).

    o	rect() and arrows() now respond to setting of par(xpd)

    o	abline() now responds to the setting of par(xpd), including
	via the "..." argument (PR#750).

    o	Using cat() to a gzfile() connection no longer compresses poorly
	(at the expense of some latency).

    o	The `exact' p-values for the two-sided two-sample
	Kolmogorov-Smirnov test in 1.3.0 were for the wrong tail.

    o	In the HTML conversion of .Rd files, \link[foo]{bar} was
	ignoring [foo] outside \code{} statements.

    o	lm.influence(), plot.lm(), influence.measures() and the
	related diagnostic measures now handle lm() fits with
	na.action=na.exclude.

    o	Eliminated segmentation fault in while loops without braces
	in their bodies.

    o	barplot did not accept NA heights unless ylim was specified.

    o	predict.lm() failed with single-column model matrix (PR#1018)

    o	legend() now also works with 100s of entries (thanks to M.Schlather).

    o	A long-standing bug leading to inaccuracy in polyroot() has been
	fixed (PR#751)

    o	A very old bug with eval() not handling a numeric `envir' argument
	according to specifications has been fixed. [This in particular